--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,10 @@
 # Header
 
+nav:
+  home: /
+  about: /about
+  tags: /tags
+
 menu:
   主页: /
   随笔: /tags/随笔/
@@ -107,7 +112,7 @@ style:
 # slider的设置
 slider:
   # 是否默认展开tags板块
-  showTags: false
+  showTags: true
 
 # 智能菜单
 # 如不需要，将该对应项置为false
